--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       totalPages: 2,               // <-- set this to your page count
       path: "pages",                // folder where images live
       prefix: "",                   // optional prefix if your files are like "mag_001.jpg"
-      ext: "jpg",                   // jpg|png|webp
+      ext: "png",                   // jpg|png|webp
       pad: 3,                       // 001, 002...
       startPage: 1,                 // 1-based
       downloadZipUrl: "",           // optional: link to a zip of the whole issue
