--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
   </main>
 
   <footer class="footer" role="contentinfo">
-    <div>Black & White UI • Vanilla 3D Flip • HITS Development</div>
+    <div>HITS Development</div>
   </footer>
 
   <!-- Config -->
   <script>
     window.MAG_CONFIG = {
-      totalPages: 1,       /* set this when you add more pages (e.g., 24) */
+      totalPages: 2,       /* set this when you add more pages (e.g., 24) */
       path: "pages",
       prefix: "",
       ext: "png",
